final fixups