@@ -13,21 +13,23 @@
 
     <properties>
         <surefire.args>${surefire.test.unit.open.args}</surefire.args>
-        <surefire.args>
-            -XX:+IgnoreUnrecognizedVMOptions
-            --add-modules=org.mule.runtime.container
-            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.context=ALL-UNNAMED
-            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.lifecycle=ALL-UNNAMED
-            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
-            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.util=ALL-UNNAMED
-            --add-opens=org.mule.runtime.container/org.mule.runtime.container.internal=ALL-UNNAMED
-            --add-opens=org.mule.runtime.artifact/org.mule.runtime.module.artifact.internal.util=ALL-UNNAMED
-            ${surefire.args.base}
-        </surefire.args>
 
         <javaModuleName>org.mule.runtime.tls</javaModuleName>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Module layer is created by the tests-runner, don't need surefire to config the boot layer for the JVM -->
+                    <useModulePath>false</useModulePath>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
